client/src/index.css
code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

html {
  height: 100%;
}

body {
  min-height: 100%;
  position: relative;
background-color: black !important;
  color: white !important;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  color: white !important;
}

.Link {
  cursor: pointer;
  text-decoration: none;
  padding-inline: 10px;
  text-shadow: 1px 1px black;
  color:white !important;

}

.Element{
padding-right: 3rem;
  padding-left: 7rem
}

ul{
  list-style-type: none;
}

.container {
padding-top: 10px;
padding-bottom: 10px;
}



.navbar-nav{
  writing-mode: vertical-rl;
text-orientation: mixed;
}

.adjustRight {
  margin-left: 10rem;
  margin-right: 6rem;
}
.rightHeader {
  position: absolute;
  top: 20px;
  right: -40px
}

.adjustLeft {
  margin-right: 10rem;
  margin-left: 6rem;
}
.leftHeader {
  position: absolute;
  top: 20px;
  left: -40px
}

.sectionContent {
  padding-top: 10%;
  padding-inline: 3%;
  padding-bottom: 3%
}

#header {
  padding-top: 7rem;
  padding-bottom: 10rem
} 

.jumbotron {
  border-radius: 30px;
  position: relative;
}

.entrance {
  margin-top: 100px;
  font-size: 80px;
  padding: 10px;
  display: inline-block;
  /* overflow: hidden; */
}

#about {
  margin-top: 3rem
}

.neonText {
  color: #000;
  text-shadow: 
  0 0 6px rgba(202,228,225,0.92),
  0 0 30px rgba(202,228,225,0.34),
  0 0 12px rgba(30,132,242,0.52),
  0 0 21px rgba(30,132,242,0.92),
  0 0 34px rgba(30,132,242,0.78),
  0 0 54px rgba(30,132,242,0.92)
}

.glow { text-shadow: 0px 0px 5px rgba(30, 132, 242); }

.card {
  border-width: 0 !important;
  background-color: transparent !important;

}

.card-link {

  text-decoration: none;
}

.card-link:hover {
  text-shadow: 
  0 0 6px rgba(202,228,225,0.92),
  0 0 30px rgba(202,228,225,0.34),
  0 0 12px rgba(30,132,242,0.52),
  0 0 21px rgba(30,132,242,0.92),
  0 0 34px rgba(30,132,242,0.78),
  0 0 54px rgba(30,132,242,0.92);
  text-decoration: underline;
}
/* .card {
  border: 0;
  background-color: rgba(0, 0, 0, 0.5);
  filter: grayscale(100%);
}

.card:hover {
  filter: grayscale(0%);
}
.card:hover > img {
  filter: opacity(50%) blur(3px);
}
.card-img {
  filter: opacity(80%);
}
.card-img-overlay > h5,
.card-img-overlay > p {
  visibility: hidden;
}
.card-img-overlay:hover h5,
.card-img-overlay:hover p {
  visibility: visible;
}
.card-text,
.card-title,
.card-footer {
  text-shadow: 1px 1px black;
} */

table {
  color: rgba(255, 255, 255, 0.575) !important;
}

.attribute{
  writing-mode: vertical-rl;
text-orientation: mixed;
  position: fixed;
  right:0;
  bottom:50%;
  font-size: xx-small;
  color: dimgray !important;
}

#resume {
margin-bottom: 3rem;
}

.resumeImg{
  position: relative;
    top: -10%; 
    left: -10%
}

.resumeButton {
  position: absolute;
  top: 40px;
  right: 20px;
  z-index: 100000;
}

footer {
  clear: both;
  position: absolute;
  bottom: 0;
  width: 100%;
  }

